--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,26 +2,26 @@ spring:
   profiles:
     active: local
 
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+    jpa:
+      hibernate:
+        ddl-auto: none
+
   application:
     name: palm-reading
-#  ai:
-#    vertex:
-#      enabled: true
-#      project-id: ${GCP_PROJECT_ID}
-#      location: us-east1
-#
-#      gemini:
-#        chat:
-#          model: gemini-1.5-flash   # ??/???
-#          options:
-#            temperature: 0.8
-#            top-p: 0.9
-
 
   ai:
-    vertex:
-      enabled: false   # local
-
+    google:
+      genai:
+        api-key: ${GEMINI_API_KEY} # ?? AI ?????? ???? ?
+        chat:
+          options:
+            model: gemini-1.5-flash # ???? ?? ??
+            temperature: 0.7
 # ?? ??? ?? ?? ?? (??? ??? ?? ??)
   servlet:
     multipart:
