--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,13 +3,10 @@ spring:
     active: local
 
   datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-    jpa:
-      hibernate:
-        ddl-auto: none
+    url: jdbc:postgresql://localhost:5432/${OUR_DB}
+    username: ${OUR_NAME}
+    password: ${OUR_PW}
+    driver-class-name: org.postgresql.Driver
 
   application:
     name: palm-reading
@@ -17,16 +14,32 @@ spring:
   ai:
     google:
       genai:
-        api-key: ${GEMINI_API_KEY} # ?? AI ?????? ???? ?
+        api-key: ${GEMINI_API_KEY}
         chat:
           options:
-            model: gemini-1.5-flash # ???? ?? ??
+            model: gemini-flash-latest
             temperature: 0.7
-# ?? ??? ?? ?? ?? (??? ??? ?? ??)
+            # JSON 강제하면 파싱 지옥 줄어듦
+            response-mime-type: application/json
+
+        # (선택) embedding 모델 명시
+        embedding:
+          api-key: ${GEMINI_API_KEY}
+          text:
+            options:
+              model: gemini-embedding-001
+
+    # ✅ pgvector는 vectorstore 아래!
+    vectorstore:
+      pgvector:
+        initialize-schema: true
+        index-type: HNSW
+        distance-type: COSINE_DISTANCE
+
   servlet:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
-  # ??? ?? ?? ?? (?? 8080)
+
 server:
   port: 8080
