--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ ext {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webmvc'
-    implementation 'org.springframework.ai:spring-ai-advisors-vector-store'
+    /*implementation 'org.springframework.ai:spring-ai-advisors-vector-store'*/
     implementation 'org.springframework.ai:spring-ai-starter-model-google-genai'
 //    implementation 'org.springframework.ai:spring-ai-starter-model-google-genai-embedding'
     compileOnly 'org.projectlombok:lombok'
