--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,8 +24,8 @@ spring:
   ai:
     google:
       genai:
-        api-key: AIzaSyBHLsMwOoPTLJSN8a3xYFMJJXV7Hnchqg8
-#        embedding:
+        api-key: ${GEMINI_API_KEY}
+        #        embedding:
 #          api-key: ${GEMINI_API_KEY}        # ⭐ 이게 핵심 (Embedding도 Developer API로)
 #          text:
 #            options:
